--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "gptsite",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "build": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
